test/libyul/yulSyntaxTests/functional_partial.yul
{
    let x := byte
}
// ----
// ParserError 2314: (20-21): Expected '(' but got '}'
